rnsc/test_data/rns_integration/error/parser/inner_directive/invalid_flag_recovers.rns
; Tests that parser continues after invalid flag error and reports subsequent errors
; Expected errors: E-015 (invalid flag), E-034 (unexpected token in inner body)

.class public MyClass
.super java/lang/Object

.inner private Inner
    .super java/lang/Object

     unknown_token ; <- E-034, still reported after recovery
.inner_end

.class_end
